k8s/namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: online-order
  labels:
    app.kubernetes.io/part-of: online-order-system
